misc tsne no bn and relu in last layer

--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"FISH_phylogeny_from_scratch2\"\n",
+    "experimentName = \"Fish_milestone_experiments\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -44,17 +44,25 @@
     "    \"suffix\":None, \n",
     "    \n",
     "    # dataset\n",
-    "    \"img_res\": 224, #32, 448\n",
+    "    \"img_res\": 448, #224 #32, 448\n",
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
     "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\": 0.1, #0.01, #0.0003, # 0.00005\n",
-    "    \"numOfTrials\":1,\n",
+    "    \"learning_rate\": 0.001,#0.001, is best #0.0001,#0.1, #0.01, #0.0003, # 0.00005\n",
+    "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"pretrained\": False,\n",
-    "    \"epochs\": 200,\n",
-    "    \"patience\": -1, # None = \"epochs\"\n",
+    "    \"pretrained\": True,\n",
+    "    \"epochs\": 40,\n",
+    "    \"patience\": -1,#12,#-1, # None = \"epochs\"\n",
+    "    \"optimizer\": \"adabelief\",#\"Adam\",\n",
+    "    \"scheduler\": \"plateau\",\n",
+    "    \"weightdecay\": 0.01, #0.0001\n",
+    "    \"scheduler_gamma\":0.5,\n",
+    "    \"scheduler_patience\":10,   \n",
+    "    \n",
+    "#     Cifar\tlr1e-3\tweightdecay5e-4\n",
+    "# ImageNet\tlr1e-3\tweightdecay1e-2\n",
     "    \n",
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \n",
@@ -65,12 +73,13 @@
     "    \n",
     "    \"adaptive_smoothing\": True,\n",
     "    \"adaptive_lambda\": 0.1,#0.015, #optimized for time\n",
-    "    \"adaptive_alpha\": 0.1,#0.8, #optimized for time\n",
+    "    \"adaptive_alpha\": 0.5,#0.8, #optimized for time\n",
     "    \n",
-    "    \"tripletEnabled\": True,\n",
+    "    \"tripletEnabled\": False,\n",
+    "    \"regularTripletLoss\": False,\n",
     "    \"tripletSamples\": 2,\n",
     "    \"tripletSelector\": \"semihard\",\n",
-    "    \"tripletMargin\": 0.2, #0.2\n",
+    "    \"tripletMargin\": 2, #0.2\n",
     "\n",
     "\n",
     "    \"phylogeny_loss\": False, \n",
@@ -95,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/FISH_phylogeny_from_scratch2/params.json'"
+       "'/raid/elhamod/Fish/experiments/Fish_milestone_experiments/params.json'"
       ]
      },
      "execution_count": 3,
@@ -150,11 +159,30 @@
     "#     {'batchSize':32, 'learning_rate': 0.0001},\n",
     "#     {'batchSize':32, 'learning_rate': 0.00005},\n",
     "#     {\"modelType\": 'HGNN_add', \"numOfTrials\":1, \"adaptive_alpha\": 0.1, \"adaptive_lambda\": 0.01},\n",
-    "#      {\"displayName\": 'Fish new archi lr0.5'},\n",
+    "#     {\"displayName\": 'Fish replicate paper params HGNN', \"modelType\": \"HGNN\", \"adaptive_alpha\": 0.9},\n",
+    "#     {\"displayName\": 'Fish replicate paper params HGNN low alpha', \"modelType\": \"HGNN\"},\n",
+    "#     {\"displayName\": 'Fish replicate paper params DISCO', \"modelType\": \"DISCO\"},\n",
+    "#     {\"displayName\": 'Fish replicate paper params Adabelief', \"optimizer\": \"adabelief\",'learning_rate': 0.001, \"weightdecay\": 0.01},\n",
+    "#     {\"displayName\": 'Fish replicate paper params Triplet alpha0.9', \"tripletEnabled\": True, \"adaptive_alpha\": 0.9},\n",
+    "#     {\"displayName\": 'Fish replicate paper params Triplet Adabelief', \"tripletEnabled\": True, \"optimizer\": \"adabelief\",'learning_rate': 0.001, \"weightdecay\": 0.01},\n",
+    "#     {\"displayName\": 'Fish replicate paper params Triplet alpha0.5', \"tripletEnabled\": True, \"adaptive_alpha\": 0.5},\n",
+    "#     {\"displayName\": 'Fish replicate paper params step', \"tripletEnabled\": True, \"scheduler\": \"step\"},\n",
+    "#     {\"displayName\": 'Fish replicate paper params cosine', \"tripletEnabled\": True, \"scheduler\": \"cosine\"},\n",
     "#     {\"adaptive_lambda\":0.1, 'tripletMargin': 3, 'displayName': 'adaptive lambda big margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":1,'tripletMargin': 3, 'displayName':'adaptive lambda bigger margin 3 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda big margin 0.2 alpha 0.5'},\n",
     "#     {\"adaptive_lambda\":0.1, 'displayName':'adaptive lambda bigger margin 0.2 alpha 0.5'},\n",
+    "#     {'displayName': 'Fish4-BB-SGD', \"learning_rate\": 0.1},\n",
+    "#     {'displayName': 'Fish4-BB-SGD-lr0.01', \"learning_rate\": 0.01},\n",
+    "#     {'displayName': 'Fish4-BB-Adabelief-gamma0.1'},\n",
+    "#     {'displayName': 'Fish4-triplet-cosine',\"tripletEnabled\": True,\"scheduler\": \"cosine\"},\n",
+    "#     {'displayName': 'Fish4-triplet-cosine-alpha0.5-margin2',\"tripletMargin\": 2,\"tripletEnabled\": True,\"adaptive_alpha\": 0.5,\"learning_rate\": 0.0005,\"scheduler\": \"cosine\"},\n",
+    "#     {'displayName': 'Fish4-triplet-alpha0.9-margin1', \"tripletEnabled\": True,\"adaptive_alpha\": 0.9,\"tripletMargin\": 1},\n",
+    "#     {'displayName': 'Fish4-triplet-alpha0.9-margin3', \"tripletEnabled\": True,\"adaptive_alpha\": 0.9,\"tripletMargin\": 3},\n",
+    "#     {'displayName': 'Fish4-triplet-alpha0.9', \"tripletEnabled\": True,\"adaptive_alpha\": 0.9},\n",
+    "#     {'displayName': 'Fish4-triplet-alpha0.1', \"tripletEnabled\": True},\n",
+    "#     {'displayName': 'Fish4-triplet-cosine*3-smallerlr-alpha0.5-margin2',\"tripletMargin\": 2,\"tripletEnabled\": True,\"adaptive_alpha\": 0.5, \"learning_rate\": 0.0005, \"scheduler\": \"cosine\", 'cosine_patience':4},\n",
+    "#     {'displayName': 'Fish4-triplet-cosine-largerbatchsize-smallerlr-alpha0.5-margin2',\"tripletMargin\": 2,\"adaptive_alpha\": 0.5, \"learning_rate\": 0.0005,\"tripletEnabled\": True, \"scheduler\": \"cosine\", 'scheduler_patience':12},\n",
     "#     {'displayName': 'Fish alpha 0.1', \"adaptive_alpha\": 0.1},\n",
     "#     {'displayName': 'Fish alpha 0.5', \"adaptive_alpha\": 0.5},\n",
     "#     {'displayName': 'Fish alpha 0.8', \"adaptive_alpha\": 0.8},\n",
@@ -164,10 +192,10 @@
     "#     {'displayName': 'Fish no triplet', \"tripletEnabled\": False},\n",
     "#     {'displayName': 'Fish from scratch no triplet', \"tripletEnabled\": False},\n",
     "#     {'displayName': 'Fish from scratch triplet'},\n",
-    "    {'displayName': 'Fish preresnet from scratch no triplet', \"tl_model\": 'preResNet', \"tripletEnabled\": False},\n",
-    "    {'displayName': 'Fish preresnet from scratch triplet', \"tl_model\": 'preResNet'},\n",
-    "    {'displayName': 'Fish resnet56 from scratch no triplet', \"tl_model\": 'ResNet56', \"tripletEnabled\": False},\n",
-    "    {'displayName': 'Fish resnet56 from scratch triplet', \"tl_model\": 'ResNet56'},\n",
+    "#     {'displayName': 'Fish preresnet from scratch no triplet', \"tl_model\": 'preResNet', \"tripletEnabled\": False},\n",
+    "#     {'displayName': 'Fish preresnet from scratch triplet', \"tl_model\": 'preResNet'},\n",
+    "#     {'displayName': 'Fish resnet56 from scratch no triplet', \"tl_model\": 'ResNet56', \"tripletEnabled\": False},\n",
+    "#     {'displayName': 'Fish resnet56 from scratch triplet', \"img_res\": 112, \"tl_model\": 'ResNet56'},\n",
     "#     {\"adaptive_smoothing\": True,'displayName': 'SGD with triplet'},\n",
     "#      {\"tripletMargin\":0.2, 'displayName': 'small margin 0.2'},\n",
     "#     {\"tripletMargin\":6, 'displayName': 'large margin 6'},\n",
@@ -201,7 +229,38 @@
     "#     {'downsample': False, 'takeFromIntermediate': True, 'downsampleOutput':0 }, #DISCO\n",
     "#     {'downsample': False, 'takeFromIntermediate': True, 'downsampleOutput':-1 }, #DSN\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'lambda':0 }, #Lambda0\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-alpha0.1', \"tripletEnabled\": True, \"adaptive_alpha\": 0.1},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-alpha0.9', \"tripletEnabled\": True, \"adaptive_alpha\": 0.9},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-gamma0.5', \"tripletEnabled\": True,\"scheduler_gamma\":0.5},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos80', \"tripletEnabled\": True, \"scheduler_patience\":80, \"scheduler\": \"cosine\"},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos80-gamma0.5', \"tripletEnabled\": True, \"scheduler_patience\":80, \"scheduler\": \"cosine\",\"scheduler_gamma\":0.5},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos40', \"tripletEnabled\": True, \"scheduler_patience\":40, \"scheduler\": \"cosine\"},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos40-gamma0.5', \"tripletEnabled\": True, \"scheduler_patience\":40, \"scheduler\": \"cosine\",\"scheduler_gamma\":0.5},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos10', \"tripletEnabled\": True, \"scheduler_patience\":10, \"scheduler\": \"cosine\"},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-cos10-gamma0.5', \"tripletEnabled\": True, \"scheduler_patience\":10, \"scheduler\": \"cosine\",\"scheduler_gamma\":0.5},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-step10', \"tripletEnabled\": True, \"scheduler_patience\":10, \"scheduler\": \"step\"},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-step10-gamma0.5', \"tripletEnabled\": True, \"scheduler_patience\":10, \"scheduler\": \"step\",\"scheduler_gamma\":0.5},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-step15', \"tripletEnabled\": True, \"scheduler_patience\":15, \"scheduler\": \"step\"},\n",
+    "#     {'displayName': 'Fish-s-triplet-hier-step15-gamma0.5', \"tripletEnabled\": True, \"scheduler_patience\":15, \"scheduler\": \"step\",\"scheduler_gamma\":0.5},\n",
     "\n",
+    "#     {'displayName': 'Fish-s3-BBlonger2', \"epochs\": 120, \"learning_rate\": 0.0001},\n",
+    "#     {'displayName': 'Fish-s3-hier_margin10-staticlambda', \"tripletEnabled\": True, \"tripletMargin\": 10,\"adaptive_smoothing\": False, \"lambda\": 0.2},\n",
+    "#     {'displayName': 'Fish-s3-hierMSE-staticlambda', \"tripletEnabled\": True,\"phylogeny_loss\": \"MSE\",\"adaptive_smoothing\": False, \"lambda\": 0.2},\n",
+    "#     {'displayName': 'Fish-s3-hierKLDiv-staticlambda', \"tripletEnabled\": True,\"phylogeny_loss\": \"KLDiv\",\"adaptive_smoothing\": False, \"lambda\": 0.2},\n",
+    "#     {'displayName': 'Fish-s2-DISCO',\"modelType\":\"DISCO\" },\n",
+    "#     {'displayName': 'Fish-s2-DISCO0.1',\"modelType\":\"DISCO\",\"adaptive_alpha\": 0.1},\n",
+    "#     {'displayName': 'Fish-s2-DISCO0.9',\"modelType\":\"DISCO\",\"adaptive_alpha\": 0.9},\n",
+    "#     {'displayName': 'Fish-s2-HGNN',\"modelType\":\"HGNN\" },\n",
+    "#     {'displayName': 'Fish-s2-HGNN0.1',\"modelType\":\"HGNN\",\"adaptive_alpha\": 0.1},\n",
+    "#     {'displayName': 'Fish-s2-HGNN0.9',\"modelType\":\"HGNN\",\"adaptive_alpha\": 0.9},\n",
+    "    \n",
+    "  \n",
+    "    # To be used later\n",
+    "    {'displayName': 'Fish-milestone-triplet-hier', \"tripletEnabled\": True},\n",
+    "    {'displayName': 'Fish-milestone-BB'},\n",
+    "    {'displayName': 'Fish-milestone-HGNN',\"modelType\":\"HGNN\"},\n",
+    "    {'displayName': 'Fish-milestone-triplet-normal', \"tripletEnabled\": True, \"regularTripletLoss\": True},\n",
+    "    {'displayName': 'Fish-milestone-DISCO',\"modelType\":\"DISCO\"},\n",
     "\n",
     "]\n",
     "\n",
@@ -218,14 +277,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish preresnet from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/b083d5cd134e116c889809982c2162efb7e37cfd8d4ff8b4559ad0d7\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'preResNet', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish preresnet from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/00cb328c41edd49afc5004a3b296f522471872fd3e6d8a0b801600bd\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish resnet56 from scratch no triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/5854f7f6df26d22178152f49e4ae7769b1103f699d32be4fe2b5ca40\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 224, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.1, 'numOfTrials': 1, 'fc_layers': 1, 'pretrained': False, 'epochs': 200, 'patience': -1, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet56', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.1, 'tripletEnabled': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 0.2, 'phylogeny_loss': False, 'displayName': 'Fish resnet56 from scratch triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/794a5c912c09cf7eb28dcd3a75d57d3dab87d801c960345ec9b72801\n"
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-triplet-hier', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/79056519cc86173c6fc94cbb19991da964d9038e76bbbaa323c2b457\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-BB', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/71b5ba93aef9f500935396ff427dcd80cabea097b39a03120ad22fa3\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'HGNN', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-HGNN', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/e48e3cbdc5f6b563cb0413a83f51c96cd9a0cd42200bcb5c2ce11114\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-triplet-normal', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/f4f5b00acad12ee1c481385f33f778875c69f73de5aad1a1ca261715\n",
+      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'DISCO', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-DISCO', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/9e2e8ea7b8feb1fd6f49c55e800be7d935f96a93ec401e53a90be84e\n"
      ]
     }
    ],
