--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Fish_milestone_experiments\"\n",
+    "experimentName = \"Fish30-5runs\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -40,7 +40,7 @@
     "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"Curated4/Easy_50\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
+    "    \"image_path\": \"Curated4/Easy_30\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
     "    \"suffix\":None, \n",
     "    \n",
     "    # dataset\n",
@@ -48,12 +48,12 @@
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
+    "    \"batchSize\": 128, #128, # Bigger is more stable (256)\n",
     "    \"learning_rate\": 0.001,#0.001, is best #0.0001,#0.1, #0.01, #0.0003, # 0.00005\n",
     "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
     "    \"pretrained\": True,\n",
-    "    \"epochs\": 40,\n",
+    "    \"epochs\": 120,\n",
     "    \"patience\": -1,#12,#-1, # None = \"epochs\"\n",
     "    \"optimizer\": \"adabelief\",#\"Adam\",\n",
     "    \"scheduler\": \"plateau\",\n",
@@ -67,6 +67,7 @@
     "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
     "    \n",
     "    \"lambda\": 0,#0.01,\n",
+    "    \"two_phase_lambda\": False,\n",
     "\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
@@ -80,6 +81,9 @@
     "    \"tripletSamples\": 2,\n",
     "    \"tripletSelector\": \"semihard\",\n",
     "    \"tripletMargin\": 2, #0.2\n",
+    "    \"triplet_layers_dic\": \"layer2,layer4\",\n",
+    "    \n",
+    "    \"L1reg\": False,\n",
     "\n",
     "\n",
     "    \"phylogeny_loss\": False, \n",
@@ -104,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/Fish_milestone_experiments/params.json'"
+       "'/raid/elhamod/Fish/experiments/Fish30-5runs/params.json'"
       ]
      },
      "execution_count": 3,
@@ -205,8 +209,9 @@
     "    \n",
     "#      {\"modelType\": 'DSN'},\n",
     "#     {\"phylogeny_loss\": False},\n",
-    "#     {\"phylogeny_loss\": \"MSE\"},\n",
-    "#     {\"phylogeny_loss\": \"KLDiv\"},\n",
+    "#     {'displayName': 'Fish-CE-newtree',\"epochs\": 160},\n",
+    "#     {'displayName': 'Fish-MSE-newtree',\"phylogeny_loss\": \"MSE\",\"epochs\": 160},\n",
+    "#     {'displayName': 'Fish-KLDiv-newtree',\"phylogeny_loss\": \"KLDiv\",\"epochs\": 160},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.7},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.5},\n",
     "#      {\"adaptive_lambda\": 0.1, \"numOfTrials\":3,\"adaptive_alpha\":0.1},\n",
@@ -217,18 +222,9 @@
     "#     {\"adaptive_alpha\": 0.9, \"adaptive_lambda\": 0.01}, #HGNN more smooth higher alpha\n",
     "   \n",
     "    \n",
-    "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 2 }, #size\n",
-    "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':200, 'takeFromIntermediateOutput':200, \"fc_layers\": 3 }, #size\n",
-    "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 3 }, #size\n",
     "\n",
-    "#     {'downsample': True, 'takeFromIntermediate': True }, #HGNN\n",
-    "#     {'downsample': True, 'takeFromIntermediate': False, 'takeFromIntermediateOutput':-1 }, #blackbox\n",
-    "#     {'downsample': False, 'takeFromIntermediate': True }, #baseline1\n",
-    "#     {'downsample': True, 'takeFromIntermediate': False }, #baseline2\n",
-    "#     {'downsample': False, 'takeFromIntermediate': False }, #baseline3\n",
-    "#     {'downsample': False, 'takeFromIntermediate': True, 'downsampleOutput':0 }, #DISCO\n",
-    "#     {'downsample': False, 'takeFromIntermediate': True, 'downsampleOutput':-1 }, #DSN\n",
-    "#     {'downsample': True, 'takeFromIntermediate': True, 'lambda':0 }, #Lambda0\n",
+    "\n",
+    "\n",
     "#     {'displayName': 'Fish-s-triplet-hier-alpha0.1', \"tripletEnabled\": True, \"adaptive_alpha\": 0.1},\n",
     "#     {'displayName': 'Fish-s-triplet-hier-alpha0.9', \"tripletEnabled\": True, \"adaptive_alpha\": 0.9},\n",
     "#     {'displayName': 'Fish-s-triplet-hier-gamma0.5', \"tripletEnabled\": True,\"scheduler_gamma\":0.5},\n",
@@ -254,13 +250,44 @@
     "#     {'displayName': 'Fish-s2-HGNN0.1',\"modelType\":\"HGNN\",\"adaptive_alpha\": 0.1},\n",
     "#     {'displayName': 'Fish-s2-HGNN0.9',\"modelType\":\"HGNN\",\"adaptive_alpha\": 0.9},\n",
     "    \n",
+    "#     {'displayName': 'Fish-triplet-hier-layer3layer4', \"tripletEnabled\": True, \"triplet_layers_dic\": \"layer3,layer4\"},\n",
+    "#     {'displayName': 'Fish-triplet-hier-notpretrained', \"pretrained\": False, \"tripletEnabled\": True},\n",
+    "#     {'displayName': 'Fish-BB-notpretrained',\"pretrained\": False},\n",
+    "#     {'displayName': 'Fish-triplet-normal-notpretrained', \"pretrained\": False, \"tripletEnabled\": True, \"regularTripletLoss\": True},\n",
     "  \n",
+    "#     {'displayName': 'Fish-triplet-hier-twophase-lambda0.01', \"tripletEnabled\": True, \"two_phase_lambda\": True, \"adaptive_smoothing\": False, \"lambda\": 0.01,},\n",
+    "#     {'displayName': 'Fish-triplet-hier-twophase-lambda0.1', \"tripletEnabled\": True, \"two_phase_lambda\": True, \"adaptive_smoothing\": False, \"lambda\": 0.1,},\n",
+    "#     {'displayName': 'Fish-triplet-hier-twophase-lambda0.2', \"tripletEnabled\": True, \"two_phase_lambda\": True, \"adaptive_smoothing\": False, \"lambda\": 0.2,},\n",
+    "#     {'displayName': 'Fish-triplet-hier-twophase-lambda0.5', \"tripletEnabled\": True, \"two_phase_lambda\": True, \"adaptive_smoothing\": False, \"lambda\": 0.5,},\n",
+    "    \n",
+    "#     {'displayName': 'Fish30-L1-MSE', \"phylogeny_loss\": \"MSE\", \"L1reg\": True, \"adaptive_smoothing\": False, \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish30-L1-KLDiv', \"phylogeny_loss\": \"KLDiv\", \"L1reg\": True, \"adaptive_smoothing\": False, \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish30-L1-CE', \"adaptive_smoothing\": False, \"L1reg\": True, \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish30-MSE', \"phylogeny_loss\": \"MSE\", \"L1reg\": False, \"adaptive_smoothing\": False, \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish30-KLDiv', \"phylogeny_loss\": \"KLDiv\", \"L1reg\": False, \"adaptive_smoothing\": False, \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish30-CE', \"adaptive_smoothing\": False, \"L1reg\": False, \"lambda\": 0.01},\n",
+    "    \n",
+    "#     {'displayName': 'Fish-224scratch-BB', \"img_res\": 224, \"pretrained\": False},\n",
+    "#     {'displayName': 'Fish-224scratch-triplet', \"img_res\": 224, \"pretrained\": False, \"tripletEnabled\": True},\n",
+    "#     {'displayName': 'Fish-224scratch-triplet-normal', \"img_res\": 224, \"pretrained\": False, \"tripletEnabled\": True, \"regularTripletLoss\": False}\n",
+    "\n",
+    "    {'displayName': 'Fish30-5runs-BB'},\n",
+    "    {'displayName': 'Fish30-5runs-MSE',\"phylogeny_loss\": \"MSE\"},\n",
+    "    {'displayName': 'Fish30-5runs-hiertriplet',\"tripletEnabled\": True, \"batchSize\": 100},\n",
+    "    {'displayName': 'Fish30-5runs-hiertripletAndMSE',\"tripletEnabled\": True,\"phylogeny_loss\": \"MSE\" , \"batchSize\": 100},\n",
+    "    {'displayName': 'Fish30-5runs-normaltriplet',\"tripletEnabled\": True, \"regularTripletLoss\": True, \"batchSize\": 100},\n",
+    "#     {'displayName': 'Fish30-hier-constantlambda0.1', \"tripletEnabled\": True, \"adaptive_smoothing\": False, \"lambda\": 0.1},\n",
+    "#     {'displayName': 'Fish30-hier-constantlambda0.2', \"tripletEnabled\": True, \"adaptive_smoothing\": False, \"lambda\": 0.2},\n",
+    "#     {'displayName': 'Fish30-hier-layer3', \"tripletEnabled\": True, \"triplet_layers_dic\": \"layer3,layer4\",},\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    # To be used later\n",
-    "    {'displayName': 'Fish-milestone-triplet-hier', \"tripletEnabled\": True},\n",
-    "    {'displayName': 'Fish-milestone-BB'},\n",
-    "    {'displayName': 'Fish-milestone-HGNN',\"modelType\":\"HGNN\"},\n",
-    "    {'displayName': 'Fish-milestone-triplet-normal', \"tripletEnabled\": True, \"regularTripletLoss\": True},\n",
-    "    {'displayName': 'Fish-milestone-DISCO',\"modelType\":\"DISCO\"},\n",
+    "#     {'displayName': 'Fish-milestone-triplet-hier', \"tripletEnabled\": True},\n",
+    "#     {'displayName': 'Fish-milestone-BB'},\n",
+    "#     {'displayName': 'Fish-milestone-HGNN',\"modelType\":\"HGNN\"},\n",
+    "#     {'displayName': 'Fish-milestone-triplet-normal', \"tripletEnabled\": True, \"regularTripletLoss\": True},\n",
+    "#     {'displayName': 'Fish-milestone-DISCO',\"modelType\":\"DISCO\"},\n",
     "\n",
     "]\n",
     "\n",
@@ -277,16 +304,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-triplet-hier', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/79056519cc86173c6fc94cbb19991da964d9038e76bbbaa323c2b457\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-BB', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/71b5ba93aef9f500935396ff427dcd80cabea097b39a03120ad22fa3\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'HGNN', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-HGNN', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/e48e3cbdc5f6b563cb0413a83f51c96cd9a0cd42200bcb5c2ce11114\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-triplet-normal', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/f4f5b00acad12ee1c481385f33f778875c69f73de5aad1a1ca261715\n",
-      "{'image_path': 'Curated4/Easy_50', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 40, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'DISCO', 'lambda': 0, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'phylogeny_loss': False, 'displayName': 'Fish-milestone-DISCO', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/9e2e8ea7b8feb1fd6f49c55e800be7d935f96a93ec401e53a90be84e\n"
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-BB', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/d5cb3503ea225692caefee6fbb34cf8657aec723adb53d1c93d0ffad\n",
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': 'MSE', 'displayName': 'Fish30-5runs-MSE', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/5aca2f765805f89fb5f676e4f34447d2268e14eb7e727a06d01024d2\n",
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-hiertriplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/4f2561522c5b25cca87e3274953ba031418f6f7a68577eb42f76277c\n",
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': 'MSE', 'displayName': 'Fish30-5runs-hiertripletAndMSE', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/70216afe7cf5e3ae7960b7af27304d7cc9fd0c8b483a573d85570e6f\n",
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-normaltriplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/a8533bcf40e28b6000c61b95c33dfcf1b041ebcc601aad4ae4db35a9\n"
      ]
     }
    ],
@@ -295,6 +322,20 @@
     "    print(i)\n",
     "    print(getModelName(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
