--- a/HGNN/analyse/Analyze multiple experiments.ipynb
+++ b/HGNN/analyse/Analyze multiple experiments.ipynb
@@ -79,18 +79,18 @@
     "       'experimentName': \"biology_paper_easy_curated4_Medium\",\n",
     "       'experimentHash': None\n",
     "    },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_easy_curated4_Easy_smaller\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
+    "    {\n",
+    "       'experimentName': \"biology_paper_easy_curated4_Easy_smaller\",\n",
+    "       'experimentHash': None\n",
+    "    },\n",
     "#     {\n",
     "#        'experimentName': \"biology_paper_curated4_Easy200_2\",\n",
     "#        'experimentHash': None\n",
     "#     },\n",
-    "        {\n",
-    "       'experimentName': \"biology_paper_curated4_Medium_noaggregation\",\n",
-    "       'experimentHash': None\n",
-    "    },\n",
+    "#         {\n",
+    "#        'experimentName': \"biology_paper_curated4_Medium_noaggregation\",\n",
+    "#        'experimentHash': None\n",
+    "#     },\n",
     "#     {\n",
     "#        'experimentName': \"biology_paper_easy_HGNN_adaptive_lambda\",\n",
     "#        'experimentHash': None\n",
@@ -99,10 +99,10 @@
     "#        'experimentName': \"biology_paper_easy_BB\",\n",
     "#        'experimentHash': None\n",
     "#     },\n",
-    "    {\n",
-    "       'experimentName': \"biology_paper_curated4_Medium_notpretrained\",\n",
-    "       'experimentHash': None\n",
-    "    },\n",
+    "#     {\n",
+    "#        'experimentName': \"biology_paper_curated4_Medium_notpretrained\",\n",
+    "#        'experimentHash': None\n",
+    "#     },\n",
     "#         {\n",
     "#        'experimentName': \"biology_paper_curated4_Medium2\",\n",
     "#        'experimentHash': None\n",
@@ -116,7 +116,8 @@
     "#     },\n",
     "]\n",
     "\n",
-    "figures_subpath = os.path.join('biologypaper_newdataset', 'curated4_augmnentation')\n",
+    "# figures_subpath = os.path.join('biologypaper_newdataset', 'curated4_augmnentation')\n",
+    "figures_subpath = os.path.join('biologypaper_newdataset', 'curated4_MEE_review')\n",
     "\n",
     "figsize=(24, 10)\n",
     "ylabel = \"accuracy (f1-score)\"\n",
@@ -225,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1274,9 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(figsize=figsize)\n",
@@ -1446,5 +1443,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
