--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "]\n",
     "\n",
-    "cp.write(params, selected_hyperp_params, \"Select\")\n",
+    "cp.write(params, selected_hyperp_params)\n",
     "\n"
    ]
   },
