--- a/HGNN/train/Train.ipynb
+++ b/HGNN/train/Train.ipynb
@@ -6,11 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentsPath = \"/raid/elhamod/CIFAR_HGNN/experiments/\" #\"/raid/elhamod/Fish/experiments/\"\n",
-    "dataPath = \"/raid/elhamod/\" #\"/raid/elhamod/Fish/\"\n",
+    "experimentsPath = \"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
+    "dataPath = \"/raid/elhamod/\"\n",
     "experimentName = \"CIFAR_phylogeny_8_4_0_KLDiv\"\n",
     "device = 0\n",
     "detailed_reporting = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "experimetnsFileName = \"experiments.csv\""
    ]
   },
   {
@@ -1343,29 +1353,13 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from tqdm.auto import trange\n",
-    "import wandb\n",
-    "\n",
-    "import warnings\n",
-    "# warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "try:\n",
-    "    import wandb\n",
-    "except:\n",
-    "    print('wandb not found')\n",
     "\n",
     "from myhelpers import config_plots, TrialStatistics\n",
-    "from myhelpers.try_warning import try_running\n",
     "from HGNN.train import CNN, dataLoader\n",
     "from myhelpers import cifar_dataLoader\n",
     "from HGNN.train.configParser import ConfigParser, getModelName, getDatasetName\n",
     "config_plots.global_settings()\n",
     "\n",
-    "experimetnsFileName = \"experiments.csv\"\n",
-    "WANDB_message=\"wandb not working\"\n",
-    "\n",
-    "\n",
-    "# For logging to server\n",
-    "try_running(lambda : wandb.login(), WANDB_message)\n",
     "\n",
     "experimentPathAndName = os.path.join(experimentsPath, experimentName)\n",
     "# set cuda\n",
@@ -1394,10 +1388,7 @@
     "        experimentHash =TrialStatistics.getTrialName(experiment_params)\n",
     "\n",
     "        # load images \n",
-    "        if experiment_params['image_path'] == 'cifar-100-python':\n",
-    "            datasetManager = cifar_dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
-    "        else:\n",
-    "            datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
+    "        datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
     "        datasetManager.updateParams(config_parser.fixPaths(experiment_params))\n",
     "        train_loader, validation_loader, test_loader = datasetManager.getLoaders()\n",
     "        architecture = {\n",
@@ -1421,12 +1412,8 @@
     "            row_information = {**row_information, **experiment_params} \n",
     "            print(row_information)\n",
     "\n",
-    "            run = try_running(lambda : wandb.init(project='HGNN', group=experimentName+\"-\"+experimentHash, name=trialHash, config=row_information), WANDB_message) #, reinit=True\n",
-    "\n",
     "            # Train/Load model\n",
     "            model = CNN.create_model(architecture, experiment_params, device=device)\n",
-    "\n",
-    "            try_running(lambda : wandb.watch(model, log=\"all\"), WANDB_message)\n",
     "\n",
     "            if os.path.exists(CNN.getModelFile(trialName)):\n",
     "                print(\"Model {0} found!\".format(trialName))\n",
@@ -1450,27 +1437,10 @@
     "            experiments_df = experiments_df.append(pd.DataFrame(row_information, index=[0]), ignore_index = True)\n",
     "            experiments_df.to_csv(experimentsFileNameAndPath, header=True, index=False)\n",
     "\n",
-    "            try_running(lambda : run.finish(), WANDB_message)\n",
-    "\n",
     "        bar.update()\n",
     "\n",
     "        experiment_index = experiment_index + 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     torch.multiprocessing.set_start_method('spawn')\n",
-    "    \n",
-    "#     import argparse\n",
-    "\n",
-    "#     parser = argparse.ArgumentParser()\n",
-    "#     parser.add_argument('--cuda', required=True, type=int)\n",
-    "#     parser.add_argument('--experiments', required=True)\n",
-    "#     parser.add_argument('--data', required=True)\n",
-    "#     parser.add_argument('--name', required=True)\n",
-    "#     parser.add_argument('--detailed', required=False, action='store_true')\n",
-    "#     args = parser.parse_args()\n",
-    "#     main(experimentName=args.name, experimentsPath=args.experiments, dataPath=args.data, device=args.cuda, detailed_reporting=args.detailed)\n"
+    "\n"
    ]
   }
  ],
